<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:fillViewport="true"
    tools:context=".Main_Page_Activity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="28dp"
            android:text="@string/gold"
            android:textColor="@android:color/holo_orange_light"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="133dp"
            android:layout_height="109dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="76dp"
            android:contentDescription="@string/ac_mac"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ac" />

        <com.ebanx.swipebtn.SwipeButton
            android:id="@+id/order_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="196dp"
            app:button_background="@drawable/shape_button"
            app:button_bottom_padding="20dp"
            app:button_image_disabled="@drawable/order"
            app:button_image_enabled="@drawable/order"
            app:button_image_height="60dp"
            app:button_image_width="100dp"
            app:button_left_padding="20dp"
            app:button_right_padding="20dp"
            app:button_top_padding="20dp"
            app:has_activate_state="true"
            app:initial_state="disabled"
            app:inner_text="@string/order"
            app:inner_text_background="@drawable/shape_rounded"
            app:inner_text_bottom_padding="18dp"
            app:inner_text_color="@android:color/white"
            app:inner_text_left_padding="18dp"
            app:inner_text_size="16sp"
            app:inner_text_top_padding="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.ebanx.swipebtn.SwipeButton
            android:id="@+id/inventory_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="264dp"
            app:button_background="@drawable/shape_button"
            app:button_bottom_padding="20dp"
            app:button_image_disabled="@drawable/inventory"
            app:button_image_enabled="@drawable/inventory"
            app:button_image_height="60dp"
            app:button_image_width="100dp"
            app:button_left_padding="20dp"
            app:button_right_padding="20dp"
            app:button_top_padding="20dp"
            app:has_activate_state="true"
            app:initial_state="disabled"
            app:inner_text="@string/inventory"
            app:inner_text_background="@drawable/shape_rounded"
            app:inner_text_bottom_padding="18dp"
            app:inner_text_color="@android:color/white"
            app:inner_text_left_padding="44dp"
            app:inner_text_size="16sp"
            app:inner_text_top_padding="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.ebanx.swipebtn.SwipeButton
            android:id="@+id/customer_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="332dp"
            app:button_background="@drawable/shape_button"
            app:button_bottom_padding="20dp"
            app:button_image_disabled="@drawable/customer"
            app:button_image_enabled="@drawable/customer"
            app:button_image_height="60dp"
            app:button_image_width="100dp"
            app:button_left_padding="20dp"
            app:button_right_padding="20dp"
            app:button_top_padding="20dp"
            app:has_activate_state="true"
            app:initial_state="disabled"
            app:inner_text="@string/customer"
            app:inner_text_background="@drawable/shape_rounded"
            app:inner_text_bottom_padding="18dp"
            app:inner_text_color="@android:color/white"
            app:inner_text_left_padding="46dp"
            app:inner_text_size="16sp"
            app:inner_text_top_padding="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.ebanx.swipebtn.SwipeButton
            android:id="@+id/employee_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="400dp"
            app:button_background="@drawable/shape_button"
            app:button_bottom_padding="20dp"
            app:button_image_disabled="@drawable/employee"
            app:button_image_enabled="@drawable/employee"
            app:button_image_height="60dp"
            app:button_image_width="100dp"
            app:button_left_padding="20dp"
            app:button_right_padding="20dp"
            app:button_top_padding="20dp"
            app:has_activate_state="true"
            app:initial_state="disabled"
            app:inner_text="@string/employee"
            app:inner_text_background="@drawable/shape_rounded"
            app:inner_text_bottom_padding="18dp"
            app:inner_text_color="@android:color/white"
            app:inner_text_left_padding="45dp"
            app:inner_text_size="16sp"
            app:inner_text_top_padding="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button"
            android:layout_width="110dp"
            android:layout_height="38dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="476dp"
            android:text="@string/about"
            android:textAppearance="@style/TextAppearance.AppCompat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>